--- a/README
+++ b/README
@@ -11,17 +11,17 @@ provider for Zim pages.
 
 Run install.sh as root to install the provider, and restart the shell. 
 uninstall.sh reverts the modifications. Both scripts use ${DESTDIR} as a prefix 
-to install and remove files.
+to the install location.
 
 2. Usage
 
 Search terms typed in the GNOME Shell overview are used to lookup Zim pages 
 from the default notebook. Clicking in a search result opens Zim (if not 
-already open) and shows the selected page. The same syntax as command zim 
---search is accepted, e.g. tag: (see Zim manual).
+already open) and shows the selected page. The same syntax as command "zim 
+--search" is accepted, e.g. "tag:" (see Zim manual).
 
 It is possible to search pages in a different notebook by passing the special 
-term notebook:<NAME>, replacing <NAME> by the notebook name (if you need to 
+term "notebook:<NAME>", replacing "<NAME>" by the notebook name (if you need to 
 search using a term starting with "notebook:", simply wrap it in double 
 quotes).
 
