--- a/README
+++ b/README
@@ -13,8 +13,8 @@ provider for Zim pages.
 1. Installation
 
 Run install.sh as root to install the provider, and restart the shell. 
-uninstall.sh reverts the modifications. Both scripts use ${DESTDIR} as a prefix 
-to the install location.
+uninstall.sh reverts the modifications. Both scripts use the first argument as 
+a prefix to the install location.
 
 2. Usage
 
