--- a/README
+++ b/README
@@ -15,19 +15,15 @@ See INSTALL for installation instructions.
 # Usage
 
 Search terms typed in the GNOME Shell overview are used to lookup Zim pages 
-from the default notebook. Clicking in a search result opens Zim (if not 
-already open) and shows the selected page. Currently, the search terms are 
-treated as a single string that is matched against page titles (NOT the full 
-path). Further improvements will bring more flexibility to the matching 
-algorithm (like matching terms out of order).
-
-It is possible to search pages in a different notebook by passing the special 
-term "notebook:<NAME>", replacing "<NAME>" by the notebook name (if you need to
-search using a term starting with "notebook:", simply wrap it in double 
-quotes).
+from your notebooks. Page titles are matched against the search terms and 
+only pages that contain all terms are shown. By default, all notebooks are 
+searched, but there is a plugin setting to limit search to the default notebook 
+only. It is also possible to limit search to a certain notebook by adding a 
+term preceded by a hashtag sign (#). Only notebooks whose name contains the # 
+term are searched. If multiple # terms are typed, all but the first one are 
+ignored.
 
 # Bugs
 
-Please, send bug reports to dsboger at gmail dot com. Or fill them in github
-issue tracker.
+Please, file bug reports or feature requests in github issue tracker.
 
